@startuml
title SO DO LOP 3 TANG - TRA CUU PHIEU DANG KY

top to bottom direction
skinparam shadowing false
skinparam linetype ortho
skinparam nodesep 55
skinparam ranksep 75
skinparam packageStyle rectangle
skinparam classAttributeIconSize 0
skinparam classBorderColor #7F8C8D

package "TANG GIAO DIEN" as GUI_LAYER #EDF9EC {
  class MHTraCuuPhieuDangKy #BFE8BA {
    - txtTimKiem: TextBox
    - grvDSPhieuDangKy: GridView
    - pnlChiTiet: Panel
    - lblMaPhieuDangKy: Label
    - lblTrangThai: Label
    - lblHoTenKhachHang: Label
    - lblSoDienThoai: Label
    - lblEmail: Label
    - lblLoaiGiayTo: Label
    - lblSoGiayTo: Label
    - lblKhuVuc: Label
    - lblSoLuongNguoi: Label
    - lblNgayDuKien: Label
    - lblGhiChu: Label
    - lblNgayLap: Label
    --
    + HienThi()
    + timKiem(sdt: String, soGiayTo: String, email: String, hoTen: String, maPDK: String)
    + chonPhieuDangKy(maPDK: String)
  }
}

package "TANG NGHIEP VU" as BUS_LAYER #FFF9E6 {
  class LapPhieuDangKy #F4E3A2 {
    + TimKiemPhieuDangKy(sdt: String, soGiayTo: String, email: String, hoTen: String, maPDK: String, maNV: String): IReadOnlyList<PhieuDangKy>
    + LayChiTietPhieuDangKy(maPDK: String, maNV: String): PhieuDangKy
  }
  class NhanVien #F4E3A2 {
    - MaNV: String
    - MaCN: String
    + DocPhamVi(maNV: String): NhanVien
  }
  class PhieuDangKy #F4E3A2 {
    - MaPDK: String
    - KhuVuc: String
    - SoLuongNguoi: Integer
    - MucGia: Decimal
    - TrangThai: String
    - KhachHang: KhachHang
    + TimKiem(maCN: String, sdt: String, soGiayTo: String, email: String, hoTen: String, maPDK: String): IReadOnlyList<PhieuDangKy>
    + DocChiTiet(maPDK: String, maCN: String): PhieuDangKy
  }
  class KhachHang #F4E3A2 {
    - MaKH: String
    - HoTen: String
    - SDT: String
    - Email: String
    - SoGiayTo: String
  }
}

package "TANG TRUY CAP DU LIEU" as DAL_LAYER #EDF6FC {
  class NhanVienDB #BFDCF0 {
    + DocChiTiet(maNV: String): NhanVien
  }
  class PhieuDangKyDB #BFDCF0 {
    + TimKiem(maCN: String, sdt: String, soGiayTo: String, email: String, hoTen: String, maPDK: String): IReadOnlyList<PhieuDangKy>
    + LayTheoMa(maPDK: String, maCN: String): PhieuDangKy
  }
  NhanVienDB -[hidden]right- PhieuDangKyDB
}

GUI_LAYER -[hidden]down- BUS_LAYER
BUS_LAYER -[hidden]down- DAL_LAYER
KhachHang -[hidden]down- PhieuDangKyDB

MHTraCuuPhieuDangKy o-down- LapPhieuDangKy
LapPhieuDangKy o-- NhanVien
LapPhieuDangKy o-- PhieuDangKy
NhanVien o-down- NhanVienDB
PhieuDangKy o-down- PhieuDangKyDB
PhieuDangKy "0..*" -- "1" KhachHang
@enduml
